# f1-race-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  cloud-run-service.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: GPU_DL_PLAN.md  api.md  data_dictionary.md  deployment.md  methodology.md  models.md  simulation.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/wiki/: CV_Splits_Init.md  Collection_Module_Structure.md  Common_Feature_Tests.md  Common_Feature_Utilities.md  Data_Collection_Core.md  Data_Collection_Tests.md  Feature_Build_Functions.md  Feature_Module_Concepts.md  GCS_Storage_Layer.md  Jolpica_API_Client.md  Jolpica_API_Tests.md  Lap_Collection_Functions.md  Lap_Collection_Tests.md  Lap_Feature_Engineering.md  Lap_Feature_Tests.md  Notebook_Generation.md  Race_Feature_Engineering.md  Race_Feature_Functions.md  Race_Feature_Tests.md  Season_Collection_Pipeline.md  Storage_Layer_Tests.md  index.md
notebooks/: 01_eda.ipynb  02_lap_eda.ipynb  03_tyre_model_feasibility.ipynb  04_feature_engineering.ipynb  05a_model_A_training.ipynb  05b_model_B_training.ipynb  05c_model_C_training.ipynb  05d_model_D_stacking.ipynb  05e_model_E_rich_stacking.ipynb  05f_model_F_lap_simulation.ipynb  05f_model_F_lap_simulation_executed.ipynb  05g_model_G_temporal.ipynb  05h_model_H_delta_mc.ipynb  05i_model_I_quantile.ipynb  06_model_comparison.ipynb  07_shap_analysis.ipynb  09_ensemble_validation.ipynb
scripts/: fetch_training_results.sh  gen_08_notebook.py  make_training_notebooks.py  monitor_training.py  poll_training_status.py  run_model_f_remote.sh  run_model_g_remote.sh  run_model_h_remote.sh  run_model_i_remote.sh  run_shap_local.py  run_training_gcp.py  run_training_remote.sh  run_training_wsl.sh  setup_wsl_env.sh  test_ensemble.py  train_bridge_model.py  vm_health_monitor.sh
src/f1_predictor/: __init__.py
src/f1_predictor/api/: __init__.py  config.py  dependencies.py  main.py  schemas.py
src/f1_predictor/api/routers/: data.py  health.py  simulation.py
src/f1_predictor/data/: collect.py  collect_laps.py  jolpica.py  storage.py
src/f1_predictor/features/: __init__.py  common.py  delta_features.py  lap_features.py  race_features.py  sequence_features.py  simulation_features.py  splits.py
src/f1_predictor/models/: __init__.py  architectures.py  dl_utils.py  gpu.py  quantile_architectures.py  sequence_architectures.py
src/f1_predictor/simulation/: __init__.py  defaults.py  delta_simulator.py  engine.py  ensemble_simulator.py  evaluation.py  quantile_simulator.py  sequence_simulator.py  strategy.py
tests/: test_collect.py  test_collect_laps.py  test_jolpica.py  test_smoke.py  test_storage.py
tests/test_features/: test_common.py  test_lap_features.py  test_race_features.py  test_splits.py
