[project]
name = "f1-predictor"
version = "0.1.0"
description = "ML-powered F1 race outcome predictions using FastF1, XGBoost, and SHAP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Jowin Jestine", email = "jjestine@myolaris.com" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_predictor"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["f1_predictor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["f1_predictor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=f1_predictor --cov-report=term-missing --cov-fail-under=70"
